JavaFX lib added, translate.sh upgraded